tests/ui/traits/new-solver/two-projection-param-candidates-are-ambiguous.stderr
error[E0283]: type annotations needed: cannot satisfy `T: Bar`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:26:5
   |
LL |     needs_bar::<T>();
   |     ^^^^^^^^^^^^^^
   |
   = note: cannot satisfy `T: Bar`
   = help: the trait `Bar` is implemented for `T`
note: required by a bound in `needs_bar`
  --> $DIR/two-projection-param-candidates-are-ambiguous.rs:23:17
   |
LL | fn needs_bar<T: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
